LPD-16396 Add opens to make sidecar work with unit test. This is only needed in unit test because gradle added "--add-opens" settings to its jvm arguments rather than setting env "JDK_JAVA_OPTIONS", while sidecar starting logic only respects parent JVM's env setting, not arguments.